nearly feature-complete

--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,20 @@
 {
-	"manifest_version": 2,
-	"name": "Translucify",
-	"description": "Chrome extension to mostly remove page elements from view.",
-	"version": "1.0.0",
-	"background": {
-			"persistent": false,
-		"scripts": [
-			"translucify.js"
-		]
-	},
-	"browser_action": {
-		"default_icon": "icon.png",
-		"default_popup": "popup.html",
-		"default_title": "Hello"
-	},
-	"permissions": [
-		"activeTab",
-		"contextMenus",
-		"https://ajax.googleapis.com/"
-	],
-	"content_scripts": [{
-			"matches": ["*://*/*"],
-			"js": ["content_script.js"]
-		}]
+  "manifest_version": 2,
+  "name": "Translucify",
+  "description": "Chrome extension to mostly remove page elements from view.",
+  "version": "1.0.0",
+  "background": {
+    "persistent": false,
+    "scripts": [
+      "translucify.js"
+    ]
+  },
+  "permissions": [
+    "activeTab",
+    "contextMenus"
+  ],
+  "content_scripts": [{
+    "matches": ["*://*/*"],
+    "js": ["content_script.js"]
+  }]
 }
